Updated DB for MovieService
